documents/examples/good/small/01-02-03-04-basic.latf
int main() {
    println(1 + 2); // 3
    int x = 2 * (3 + 1);
    println(x / 2); // 4
    println(x % 2); // 0

    bool b = true;
    b = b || false;
    b = b && (true && !b);
    if (b) {
        println("b is true");
    }
    else {
        println("b is false"); // <-
    }

    string s = "hello";
    println(s); // hello

    return 0;
}